--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
         <app-appareil></app-appareil>
         <app-appareil></app-appareil>
       </ul>
+      <button class="btn btn-success" disabled>Tout allumer</button>
     </div>
   </div>
 </div>
