--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,10 @@
 	    <p>Mis à jour : {{ lastUpdate | async | date: 'y MMMM EEEE d' | uppercase }}</p>
 
 	    <ul class="list-group">
-		<app-appareil  *ngFor="let appareil of appareils"
+		<app-appareil  *ngFor="let appareil of appareils; let i = index"
 			       [appareilName]="appareil.name"
-			       [appareilStatus]="appareil.status"></app-appareil>
+			       [appareilStatus]="appareil.status"
+			       [index]="i"></app-appareil>
 	    </ul>
 	    
 	    <button class="btn btn-success"
