--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 		<app-appareil  *ngFor="let appareil of appareils; let i = index"
 			       [appareilName]="appareil.name"
 			       [appareilStatus]="appareil.status"
-			       [index]="i"></app-appareil>
+			       [indexOfAppareil]="i"></app-appareil>
 	    </ul>
 	    
 	    <button class="btn btn-success"
