vidéo 7:30 méthode post  HttpClient Firebase

--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -18,4 +18,8 @@
     <button class="btn btn-danger"
 	    [disabled]="!isAuth"
 	    (click)="onEteindre()">Tout éteindre</button>
+    <button class="btn btn-success"
+	    [disabled]="!isAuth"
+	    (click)="onSauvegarder()">Enregistrer</button>
+    
 </div>
