vidéo 11:30 méthode gett  HttpClient Firebase

--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -21,5 +21,8 @@
     <button class="btn btn-success"
 	    [disabled]="!isAuth"
 	    (click)="onSauvegarder()">Enregistrer</button>
+    <button class="btn btn-success"
+	    [disabled]="!isAuth"
+	    (click)="onRecuperer()">Récupérer les appareils</button>
     
 </div>
