--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12">
-    <h2>Mes appareils</h2>
+    <h2>La liste des appareils</h2>
 
     <p>Mis à jour : {{ lastUpdate | async | date: 'y MMMM EEEE d' | uppercase }}</p>
 
