--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,23 +2,25 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
 	<div class="navbar-collapse">
+	   Navigation 
 	    <ul class="nav navbar-nav">
 		<li routerLinkActive="active"><a routerLink="auth">Authentification</a></li>
 		<li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
 	    </ul>
-	    
+
 	    <div class="navbar-right">
-		<p>Vous êtes connecté depuis {{ secondes }} secondes !</p>
+		<p>Vous êtes connecté depuis {{ secondes * 5 }} secondes !</p>
 	    </div>
-	</div>  
+	</div>
     </div>
 </nav>
 
 <!-- Routing -->
+Routing
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <router-outlet></router-outlet>
+    <div class="row">
+	<div class="col-xs-12">
+	    <router-outlet></router-outlet>
+	</div>
     </div>
-  </div>
 </div>
