--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -1,15 +1,20 @@
 <li [ngClass]="{'list-group-item': true,
                'list-group-item-success': appareilStatus === 'allumé',
-               'list-group-item-danger': appareilStatus === 'éteint'}">
-
+               'list-group-item-danger': appareilStatus === 'éteint'
+	       }">
+    
     <h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}</h4>
     <a [routerLink]="[id]">Détail</a>
+    &nbsp;
     <button class="btn btn-success"
 	    (click)="onSwitchOn()"
 	    [disabled]="appareilStatus === 'allumé'">Allumer</button>
-
+    &nbsp;
     <button class="btn btn-danger"
 	    (click)="onSwitchOff()"
 	    [disabled]="appareilStatus === 'éteint'">Eteindre</button>
+    &nbsp;
+    <button class="btn btn-primary"
+	    (click)="onDelete()">Détruire</button>
 
 </li>
