ajouté models/ et ReactiveFormsModule dans app.module.ts

--- a/src/app/new-appareil/new-appareil.component.html
+++ b/src/app/new-appareil/new-appareil.component.html
@@ -1,4 +1,4 @@
- <form [formGroup]="appareilForm">
+<form [formGroup]="appareilForm">
 	<div class="form-group">
 	    <label for="name">Name</label>
 	    <input type="text"
@@ -10,7 +10,7 @@
 	<div class="form-group">
 	    <label for="status">Statut</label>
 	    <input type="text"
-		   placeholder="Entrer le status ..."
+		   placeholder="Entrer le statut ..."
 		   id="status"
 		   formControlName="status"
 		   class="form-control">
