--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
 	    <ul class="nav navbar-nav">
 		<li routerLinkActive="active"><a routerLink="auth">Authentification</a></li>
 		<li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
+		<li routerLinkActive="active"><a routerLink="new-appareil">Créer un Appareil</a></li>
 	    </ul>
 
 	    <div class="navbar-right">
